# blaze-starter

./: .coverage  .djlintrc  .dockerignore  .env-tpl  .eslintrc.js  .gitignore  .pre-commit-config.yaml  .prettierignore  .stylelintrc.js  Dockerfile  LICENSE.md  README.md  docker-compose.yml  example-production.env  example.env  fly.toml  justfile  litestream.yml  manage.py-tpl  package-lock.json  package.json  playwright.config.js  postcss.config.js  pyproject.toml  requirements.in  start.sh  tailwind.config.js
.github/workflows/: actions.yml  blaze-django.yml  blaze-playwright.yml
config/: settings.py-tpl  urls.py-tpl
config/tests/: test_admin.py  test_forms.py  test_models.py  test_views.py
core/: admin.py  forms.py  middleware.py  models.py  utils.py  views.py-tpl
dev/: 0002_adjust_timezone_migration.py  coverage  generate-django-key  setup-venv  setup.sh  start  test-build  test-build-reset  update-packages  update-venv
documentation/: index.md  tailwind.md
documentation/deployment/: digitalocean.md  fly.md  index.md
e2e/: auth.setup.js  home-page.spec.js  login-page.spec.js  sample.env  start-django.sh
requirements/: requirements.in  requirements.txt
script/: bootstrap  database-warmup  generate-django-key  setup.sh
self-destruct/: next-steps.md  placeholder.html  urls.py
static_src/css/: main.css
tailwind/: main.css
templates/: 404.html  base.html  offline.html  placeholder.html  private.html
templates/admin/: base-personal.html  base.html
templates/django_registration/: activation_complete.html  activation_email_body.txt  (+6 more)
(+14 files in other folders)
